# watchtower

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
deploy/: install.md  streamwatch.service  watchtower.service  wireproxy.service
streamwatch/: __init__.py  app.py  capture.py  config.py  db.py  discord.py  health.py  main.py  notify.py  pipeline.py  summarize.py  util.py
streamwatch/chat/: __init__.py  live_chat_replay.py  twitch.py  youtube_ext.py
streamwatch/detectors/: __init__.py  twitch.py  youtube.py
streamwatch/llm/: claude_cli.py  codex_cli.py
streamwatch/stt/: __init__.py  base.py  groq.py  whispercpp.py
tests/: conftest.py  test_chat_queue.py  test_config.py  test_db.py  test_detectors.py  test_digest_condense.py  test_digest_model.py  test_discord_embeds.py  test_finds.py  test_live_chat_replay.py  test_llm_argv.py  test_simulate.py  test_summarize.py  test_util.py  test_vtt.py  test_whisper_parse.py  test_youtube_detector.py  test_youtube_parse.py
tests/fixtures/: sample.vtt  sample_live_chat.json  whisper_output.txt  youtube_live.html  youtube_notlive.html  youtube_upcoming.html
watchtower/: __init__.py  app.py  capture.py  config.py  db.py  discord.py  health.py  main.py  notify.py  pipeline.py  summarize.py  util.py
watchtower/chat/: base.py  live_chat_replay.py  twitch.py  youtube_ext.py
watchtower/detectors/: __init__.py  base.py  twitch.py  youtube.py
watchtower/llm/: __init__.py  base.py  claude_cli.py  codex_cli.py  none.py
watchtower/stt/: groq.py  whispercpp.py
