[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamwatch"
version = "0.1.0"
description = "Self-hosted daemon that watches livestreams (YouTube + Twitch), transcribes locally, and posts rolling summaries + digests to Discord."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "streamwatch" }]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Twitch detection + chat ingest. Kept optional so the core (YouTube-only) install
# stays tiny; adapters use lazy imports and degrade cleanly if this is absent.
twitch = ["twitchio>=3.0"]
# Developer / test tooling.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
streamwatch = "streamwatch.main:cli"

[tool.setuptools.packages.find]
include = ["streamwatch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
