[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchtower"
version = "0.1.0"
description = "Self-hosted daemon that turns livestreams into structured knowledge: local Whisper transcription, LLM rolling summaries, and a permanent database of finds."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aamir Hullur" }]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Twitch detection + chat ingest. Kept optional so the core (YouTube-only) install
# stays tiny; adapters use lazy imports and degrade cleanly if this is absent.
twitch = ["twitchio>=3.0"]
# Developer / test tooling.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
watchtower = "watchtower.main:cli"

[tool.setuptools.packages.find]
include = ["watchtower*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
